<resources>
    <string name="app_name">DimondGame</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="play_game">Play Game</string>
    <string name="leader_board">Leader Board</string>
    <string name="enter_bet_amount">Enter Bet Amount:</string>
    <string name="amount_in">Amount in ₹</string>
    <string name="bat">Bat</string>
    <string name="user">User</string>
    <string name="_0">0</string>
    <string name="withdraw">Withdraw</string>
    <string name="credit_0">Credit: 0</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="welcome_to_diamond_bomb_game">Welcome to Diamond - Bomb Game</string>
</resources>