<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:fillViewport="true"
    android:background="#F8F9FA"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvLoginActLogintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="32sp"
            android:textColor="#1A237E"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp" />

        <EditText
            android:id="@+id/edtLoginActUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:textColorHint="#757575"
            android:textSize="16sp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/edtLoginActPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            android:textSize="16sp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btnLoginActSubmit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#3F51B5"
            android:layout_marginBottom="20dp"
            android:elevation="4dp"
            android:background="@drawable/rounded_button"/>

        <TextView
            android:id="@+id/tvLoginActSignupLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="14sp"
            android:textColor="#3F51B5"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>
